# rag-on-wikipedia

./: .gitignore  EXERCISE.md  Makefile  README.md  SUBMISSION.md  agent.py  course.yaml  pyproject.toml
grading/exercise-01-structure-aware-chunking/: judge.json
grading/exercise-02-hybrid-retrieval/: judge.json
grading/exercise-03-query-decomposition/: judge.json
grading/exercise-04-reranking/: judge.json
grading/exercise-05-citation-faithfulness/: judge.json
grading/exercise-06-disambiguation/: judge.json
grading/exercise-07-vector-scale/: judge.json
grading/exercise-08-freshness/: judge.json
grading/exercise-09-adversarial/: judge.json
grading/exercise-10-cost-slo/: judge.json
grading/exercise-11-eval-driven/: judge.json
grading/final-integrated/: judge.json
